--- a/docs/docs/genai/tracing/quality-with-traces.mdx
+++ b/docs/docs/genai/tracing/quality-with-traces.mdx
@@ -30,12 +30,14 @@ traces = mlflow.search_traces(
     experiment_ids=["1"],
     filter_string="execution_time_ms > 3000 AND status = 'OK'",
     max_results=100,
-    return_type="list"
+    return_type="list",
 )
 
 # Analyze patterns
 execution_times = [trace.info.execution_time_ms for trace in traces]
-print(f"Found {len(traces)} slow traces with average time: {sum(execution_times)/len(execution_times):.2f}ms")
+print(
+    f"Found {len(traces)} slow traces with average time: {sum(execution_times)/len(execution_times):.2f}ms"
+)
 
 # Look for correlations with tags
 slow_trace_tags = {}
@@ -57,15 +59,11 @@ for key, values in slow_trace_tags.items():
 ```python
 # Find high-quality and low-quality traces
 high_quality = mlflow.search_traces(
-    experiment_ids=["1"],
-    filter_string="tags.feedback = 'positive'",
-    max_results=20
+    experiment_ids=["1"], filter_string="tags.feedback = 'positive'", max_results=20
 )
 
 low_quality = mlflow.search_traces(
-    experiment_ids=["1"],
-    filter_string="tags.feedback = 'negative'",
-    max_results=20
+    experiment_ids=["1"], filter_string="tags.feedback = 'negative'", max_results=20
 )
 
 # Compare average execution times
@@ -92,23 +90,23 @@ traces = mlflow.search_traces(
     experiment_ids=["1"],
     filter_string="timestamp_ms > 1698876000000",  # Recent traces
     max_results=500,
-    return_type="list"
+    return_type="list",
 )
 
 # Prepare dataset format
 eval_data = []
 for trace in traces:
     trace_entry = {
-        'trace_id': trace.info.trace_id,
-        'execution_time_ms': trace.info.execution_time_ms,
-        'status': trace.info.status,
-        'timestamp_ms': trace.info.timestamp_ms,
+        "trace_id": trace.info.trace_id,
+        "execution_time_ms": trace.info.execution_time_ms,
+        "status": trace.info.status,
+        "timestamp_ms": trace.info.timestamp_ms,
     }
-    
+
     # Add tags as columns
     for key, value in trace.data.tags.items():
-        trace_entry[f'tag_{key}'] = value
-    
+        trace_entry[f"tag_{key}"] = value
+
     eval_data.append(trace_entry)
 
 # Create evaluation dataset
@@ -121,22 +119,21 @@ eval_df.to_csv("evaluation_dataset.csv", index=False)
 ```python
 # Add quality categorization
 def categorize_quality(execution_time, status, has_positive_feedback=False):
-    if status == 'ERROR':
-        return 'poor'
+    if status == "ERROR":
+        return "poor"
     elif has_positive_feedback:
-        return 'excellent'
+        return "excellent"
     elif execution_time < 1000:
-        return 'good'
+        return "good"
     else:
-        return 'acceptable'
+        return "acceptable"
 
-eval_df['quality_label'] = eval_df.apply(
+
+eval_df["quality_label"] = eval_df.apply(
     lambda row: categorize_quality(
-        row['execution_time_ms'], 
-        row['status'],
-        row.get('tag_feedback') == 'positive'
-    ), 
-    axis=1
+        row["execution_time_ms"], row["status"], row.get("tag_feedback") == "positive"
+    ),
+    axis=1,
 )
 
 # Log dataset to MLflow
@@ -154,46 +151,51 @@ Use traces to optimize prompts systematically:
 ```python
 import mlflow
 
+
 @mlflow.trace
 def evaluate_prompt_version(prompt, version, input_text):
     """Evaluate a specific prompt version with tracing."""
-    
+
     mlflow.update_current_trace(
         tags={
             "prompt_name": prompt.name,
             "prompt_version": str(version),
-            "evaluation_type": "prompt_comparison"
+            "evaluation_type": "prompt_comparison",
         }
     )
-    
+
     from openai import OpenAI
+
     client = OpenAI()
-    
+
     # Format and execute prompt
     formatted_prompt = prompt.format(num_sentences=2, sentences=input_text)
-    
+
     response = client.chat.completions.create(
         model="gpt-4o-mini",
         messages=[{"role": "user", "content": formatted_prompt}],
     )
-    
+
     result = response.choices[0].message.content
-    
+
     # Add metrics to trace
     mlflow.update_current_trace(
         attributes={
             "response_length": len(result),
-            "token_usage": response.usage.total_tokens
+            "token_usage": response.usage.total_tokens,
         }
     )
-    
+
     return result
+
 
 # Compare prompt versions
 prompt_v1 = mlflow.load_prompt("prompts:/summarization-prompt/1")
 prompt_v2 = mlflow.load_prompt("prompts:/summarization-prompt/2")
 
-test_input = "MLflow is an open source platform for managing machine learning lifecycles..."
+test_input = (
+    "MLflow is an open source platform for managing machine learning lifecycles..."
+)
 
 result_v1 = evaluate_prompt_version(prompt_v1, 1, test_input)
 result_v2 = evaluate_prompt_version(prompt_v2, 2, test_input)
@@ -205,28 +207,25 @@ result_v2 = evaluate_prompt_version(prompt_v2, 2, test_input)
 @mlflow.trace
 def improved_response_function(user_message):
     """Enhanced function based on trace analysis."""
-    
+
     mlflow.update_current_trace(
-        tags={
-            "version": "v2.0",
-            "improvement_target": "reduce_latency"
-        }
+        tags={"version": "v2.0", "improvement_target": "reduce_latency"}
     )
-    
+
     # Add validation based on trace insights
     if len(user_message.strip()) < 3:
         mlflow.update_current_trace(tags={"validation": "rejected_too_short"})
         return "Please provide a more detailed question."
-    
+
     # Your improved application logic here
     from openai import OpenAI
+
     client = OpenAI()
-    
+
     response = client.chat.completions.create(
-        model="gpt-4o-mini",
-        messages=[{"role": "user", "content": user_message}]
+        model="gpt-4o-mini", messages=[{"role": "user", "content": user_message}]
     )
-    
+
     return response.choices[0].message.content
 ```
 
@@ -238,50 +237,56 @@ def improved_response_function(user_message):
 import mlflow
 from datetime import datetime, timedelta
 
+
 def compare_before_after_improvement():
     """Compare trace performance before and after improvements."""
-    
+
     # Define improvement deployment date
     improvement_date = datetime(2024, 6, 1)
-    
+
     # Get traces before and after improvement
     before_traces = mlflow.search_traces(
         experiment_ids=["1"],
         filter_string=f"timestamp_ms < {int(improvement_date.timestamp() * 1000)}",
-        max_results=200
+        max_results=200,
     )
-    
+
     after_traces = mlflow.search_traces(
         experiment_ids=["1"],
         filter_string=f"timestamp_ms >= {int(improvement_date.timestamp() * 1000)}",
-        max_results=200
+        max_results=200,
     )
-    
+
     # Compare key metrics
     def calculate_metrics(traces):
         if not traces:
             return {}
-            
+
         execution_times = [t.info.execution_time_ms for t in traces]
         statuses = [t.info.status for t in traces]
-        
+
         return {
-            'avg_execution_time': sum(execution_times) / len(execution_times),
-            'error_rate': statuses.count('ERROR') / len(statuses),
-            'total_traces': len(traces)
+            "avg_execution_time": sum(execution_times) / len(execution_times),
+            "error_rate": statuses.count("ERROR") / len(statuses),
+            "total_traces": len(traces),
         }
-    
+
     before_metrics = calculate_metrics(before_traces)
     after_metrics = calculate_metrics(after_traces)
-    
+
     print("Performance Comparison:")
     print(f"Before: {before_metrics}")
     print(f"After: {after_metrics}")
-    
+
     # Calculate improvements
     if before_metrics and after_metrics:
-        time_improvement = (before_metrics['avg_execution_time'] - after_metrics['avg_execution_time']) / before_metrics['avg_execution_time'] * 100
+        time_improvement = (
+            (before_metrics["avg_execution_time"] - after_metrics["avg_execution_time"])
+            / before_metrics["avg_execution_time"]
+            * 100
+        )
         print(f"Execution time improvement: {time_improvement:.1f}%")
+
 
 compare_before_after_improvement()
 ```
@@ -298,11 +303,13 @@ import pandas as pd
 eval_data = pd.read_csv("evaluation_dataset.csv")
 
 # Prepare data for MLflow evaluation
-evaluation_data = pd.DataFrame({
-    "inputs": eval_data["tag_user_input"].fillna(""),
-    "targets": eval_data["tag_expected_output"].fillna(""),
-    "predictions": eval_data["tag_actual_output"].fillna("")
-})
+evaluation_data = pd.DataFrame(
+    {
+        "inputs": eval_data["tag_user_input"].fillna(""),
+        "targets": eval_data["tag_expected_output"].fillna(""),
+        "predictions": eval_data["tag_actual_output"].fillna(""),
+    }
+)
 
 # Run evaluation
 with mlflow.start_run():
@@ -313,9 +320,9 @@ with mlflow.start_run():
         extra_metrics=[
             mlflow.metrics.exact_match(),
             mlflow.metrics.toxicity(),
-        ]
+        ],
     )
-    
+
     print(f"Evaluation results: {results.metrics}")
 ```
 
@@ -328,7 +335,7 @@ You can get started with a [free trial today](https://signup.databricks.com/?des
 
 Databricks allows you to access:
 - Advanced LLM-as-a-judge evaluation
-- Automated quality scoring in production  
+- Automated quality scoring in production
 - Comprehensive evaluation pipelines
 - Built-in quality and safety metrics
 :::
@@ -352,7 +359,7 @@ Quality improvement is an iterative process. Start with your most critical quali
 Using traces for quality evaluation enables:
 
 - **Pattern Discovery**: Identify common failure modes and quality issues
-- **Data-Driven Improvements**: Base improvements on real production data  
+- **Data-Driven Improvements**: Base improvements on real production data
 - **Systematic Testing**: Create evaluation datasets from representative traces
 - **Impact Measurement**: Quantify the effect of your improvements
 - **Continuous Monitoring**: Track quality trends over time
