--- a/docs/docs/genai/tracing/attach-tags/index.mdx
+++ b/docs/docs/genai/tracing/attach-tags/index.mdx
@@ -35,10 +35,12 @@ Use <APILink fn="mlflow.update_current_trace" /> to add tags during trace execut
 ```python
 import mlflow
 
+
 @mlflow.trace
 def my_func(x):
     mlflow.update_current_trace(tags={"fruit": "apple"})
     return x + 1
+
 
 result = my_func(5)
 ```
@@ -48,6 +50,7 @@ result = my_func(5)
 ```python
 import mlflow
 import os
+
 
 @mlflow.trace
 def process_user_request(user_id: str, session_id: str, request_text: str):
@@ -59,10 +62,10 @@ def process_user_request(user_id: str, session_id: str, request_text: str):
             "environment": os.getenv("ENVIRONMENT", "development"),
             "model_version": os.getenv("MODEL_VERSION", "1.0.0"),
             "request_type": "chat_completion",
-            "priority": "high" if "urgent" in request_text.lower() else "normal"
+            "priority": "high" if "urgent" in request_text.lower() else "normal",
         }
     )
-    
+
     response = f"Processed: {request_text}"
     return response
 ```
@@ -74,26 +77,29 @@ def process_user_request(user_id: str, session_id: str, request_text: str):
 def intelligent_routing(query: str):
     # Initial tags
     mlflow.update_current_trace(tags={"query_type": "unknown"})
-    
+
     if "weather" in query.lower():
-        mlflow.update_current_trace(tags={
-            "query_type": "weather",
-            "routing": "weather_service",
-            "complexity": "simple"
-        })
+        mlflow.update_current_trace(
+            tags={
+                "query_type": "weather",
+                "routing": "weather_service",
+                "complexity": "simple",
+            }
+        )
         return handle_weather_query(query)
     elif "complex calculation" in query.lower():
-        mlflow.update_current_trace(tags={
-            "query_type": "calculation", 
-            "routing": "math_service",
-            "complexity": "high"
-        })
+        mlflow.update_current_trace(
+            tags={
+                "query_type": "calculation",
+                "routing": "math_service",
+                "complexity": "high",
+            }
+        )
         return handle_calculation(query)
     else:
-        mlflow.update_current_trace(tags={
-            "query_type": "general",
-            "routing": "general_llm"
-        })
+        mlflow.update_current_trace(
+            tags={"query_type": "general", "routing": "general_llm"}
+        )
         return handle_general_query(query)
 ```
 
@@ -160,22 +166,14 @@ client = MlflowClient()
 
 # Find traces that need to be tagged
 traces = mlflow.search_traces(
-    experiment_ids=["1"],
-    filter_string="status = 'ERROR'",
-    max_results=100
+    experiment_ids=["1"], filter_string="status = 'ERROR'", max_results=100
 )
 
 # Add tags to all error traces
 for trace in traces:
+    client.set_trace_tag(trace_id=trace.info.trace_id, key="needs_review", value="true")
     client.set_trace_tag(
-        trace_id=trace.info.trace_id,
-        key="needs_review",
-        value="true"
-    )
-    client.set_trace_tag(
-        trace_id=trace.info.trace_id,
-        key="review_priority",
-        value="high"
+        trace_id=trace.info.trace_id, key="review_priority", value="high"
     )
 ```
 
@@ -190,26 +188,22 @@ client = MlflowClient()
 
 # Get slow traces for analysis
 traces = mlflow.search_traces(
-    experiment_ids=["1"],
-    filter_string="execution_time_ms > 5000",
-    max_results=50
+    experiment_ids=["1"], filter_string="execution_time_ms > 5000", max_results=50
 )
 
 # Tag based on performance analysis
 for trace in traces:
     execution_time = trace.info.execution_time_ms
-    
+
     if execution_time > 10000:
         performance_tag = "very_slow"
     elif execution_time > 7500:
         performance_tag = "slow"
     else:
         performance_tag = "moderate"
-    
+
     client.set_trace_tag(
-        trace_id=trace.info.trace_id,
-        key="performance_category",
-        value=performance_tag
+        trace_id=trace.info.trace_id, key="performance_category", value=performance_tag
     )
 ```
 
@@ -240,20 +234,17 @@ import mlflow
 
 # Find traces by environment
 production_traces = mlflow.search_traces(
-    experiment_ids=["1"],
-    filter_string="tags.environment = 'production'"
+    experiment_ids=["1"], filter_string="tags.environment = 'production'"
 )
 
 # Find traces by user
 user_traces = mlflow.search_traces(
-    experiment_ids=["1"],
-    filter_string="tags.user_id = 'user_123'"
+    experiment_ids=["1"], filter_string="tags.user_id = 'user_123'"
 )
 
 # Find high-priority traces
 urgent_traces = mlflow.search_traces(
-    experiment_ids=["1"],
-    filter_string="tags.priority = 'high'"
+    experiment_ids=["1"], filter_string="tags.priority = 'high'"
 )
 ```
 
@@ -264,24 +255,24 @@ urgent_traces = mlflow.search_traces(
 slow_production_errors = mlflow.search_traces(
     experiment_ids=["1"],
     filter_string="""
-        tags.environment = 'production' 
-        AND status = 'ERROR' 
+        tags.environment = 'production'
+        AND status = 'ERROR'
         AND execution_time_ms > 5000
-    """
+    """,
 )
 
 # Find traces that need review
 review_traces = mlflow.search_traces(
     experiment_ids=["1"],
     filter_string="tags.needs_review = 'true'",
-    order_by=["timestamp_ms DESC"]
+    order_by=["timestamp_ms DESC"],
 )
 
 # Find specific user sessions
 session_traces = mlflow.search_traces(
     experiment_ids=["1"],
     filter_string="tags.session_id = 'session_456'",
-    order_by=["timestamp_ms ASC"]
+    order_by=["timestamp_ms ASC"],
 )
 ```
 
@@ -290,22 +281,20 @@ session_traces = mlflow.search_traces(
 ```python
 # Monitor A/B test performance
 control_group = mlflow.search_traces(
-    experiment_ids=["1"],
-    filter_string="tags.experiment_variant = 'control'"
+    experiment_ids=["1"], filter_string="tags.experiment_variant = 'control'"
 )
 
 treatment_group = mlflow.search_traces(
-    experiment_ids=["1"],
-    filter_string="tags.experiment_variant = 'treatment'"
+    experiment_ids=["1"], filter_string="tags.experiment_variant = 'treatment'"
 )
 
 # Find traces needing escalation
 escalation_traces = mlflow.search_traces(
     experiment_ids=["1"],
     filter_string="""
-        tags.sla_tier = 'critical' 
+        tags.sla_tier = 'critical'
         AND execution_time_ms > 30000
-    """
+    """,
 )
 ```
 
@@ -314,18 +303,20 @@ escalation_traces = mlflow.search_traces(
 ```python
 # Generate performance reports by model version
 model_v1_traces = mlflow.search_traces(
-    experiment_ids=["1"],
-    filter_string="tags.model_version = 'v1.0.0'"
+    experiment_ids=["1"], filter_string="tags.model_version = 'v1.0.0'"
 )
 
 model_v2_traces = mlflow.search_traces(
-    experiment_ids=["1"],
-    filter_string="tags.model_version = 'v2.0.0'"
+    experiment_ids=["1"], filter_string="tags.model_version = 'v2.0.0'"
 )
 
 # Compare performance
-v1_avg_time = sum(t.info.execution_time_ms for t in model_v1_traces) / len(model_v1_traces)
-v2_avg_time = sum(t.info.execution_time_ms for t in model_v2_traces) / len(model_v2_traces)
+v1_avg_time = sum(t.info.execution_time_ms for t in model_v1_traces) / len(
+    model_v1_traces
+)
+v2_avg_time = sum(t.info.execution_time_ms for t in model_v2_traces) / len(
+    model_v2_traces
+)
 
 print(f"V1 average time: {v1_avg_time:.2f}ms")
 print(f"V2 average time: {v2_avg_time:.2f}ms")
@@ -342,18 +333,18 @@ print(f"V2 average time: {v2_avg_time:.2f}ms")
 ```python
 # Good: Consistent naming
 tags = {
-    "environment": "production",        # lowercase
-    "model_version": "v2.1.0",         # semantic versioning
-    "user_segment": "premium",         # descriptive names
-    "processing_stage": "preprocessing" # clear context
+    "environment": "production",  # lowercase
+    "model_version": "v2.1.0",  # semantic versioning
+    "user_segment": "premium",  # descriptive names
+    "processing_stage": "preprocessing",  # clear context
 }
 
 # Avoid: Inconsistent naming
 tags = {
-    "env": "PROD",           # abbreviation + uppercase
-    "ModelVer": "2.1",       # mixed case + different format
+    "env": "PROD",  # abbreviation + uppercase
+    "ModelVer": "2.1",  # mixed case + different format
     "user_type": "premium",  # different terminology
-    "stage": "pre"           # unclear abbreviation
+    "stage": "pre",  # unclear abbreviation
 }
 ```
 
@@ -368,7 +359,7 @@ tags = {
     "user.segment": "enterprise",
     "user.plan": "premium",
     "request.type": "completion",
-    "request.priority": "high"
+    "request.priority": "high",
 }
 ```
 
@@ -381,7 +372,7 @@ tags = {
     "deployment_date": "2024-01-15",
     "quarter": "Q1_2024",
     "week": "2024-W03",
-    "shift": "evening"  # for operational monitoring
+    "shift": "evening",  # for operational monitoring
 }
 ```
 
@@ -390,10 +381,10 @@ tags = {
 ```python
 # Tags for monitoring and alerting
 tags = {
-    "sla_tier": "critical",      # for SLA monitoring
-    "cost_center": "ml_platform", # for cost attribution
-    "alert_group": "ml_ops",     # for alert routing
-    "escalation": "tier_1"       # for incident management
+    "sla_tier": "critical",  # for SLA monitoring
+    "cost_center": "ml_platform",  # for cost attribution
+    "alert_group": "ml_ops",  # for alert routing
+    "escalation": "tier_1",  # for incident management
 }
 ```
 
@@ -405,7 +396,7 @@ tags = {
     "experiment_name": "prompt_optimization_v2",
     "variant": "control",
     "hypothesis": "improved_context_helps",
-    "feature_flag": "new_prompt_engine"
+    "feature_flag": "new_prompt_engine",
 }
 ```
 
