--- a/docs/docs/genai/tracing/observe-with-traces/delete-traces.mdx
+++ b/docs/docs/genai/tracing/observe-with-traces/delete-traces.mdx
@@ -30,9 +30,7 @@ Deleting a trace is an irreversible process. Ensure that the parameters provided
 
     # Delete traces older than current time, limit to 100 traces
     deleted_count = client.delete_traces(
-        experiment_id="1", 
-        max_timestamp_millis=current_time, 
-        max_traces=100
+        experiment_id="1", max_timestamp_millis=current_time, max_traces=100
     )
 
     print(f"Deleted {deleted_count} traces")
@@ -48,8 +46,7 @@ Deleting a trace is an irreversible process. Ensure that the parameters provided
     timestamp_ms = int(seven_days_ago.timestamp() * 1000)
 
     deleted_count = client.delete_traces(
-        experiment_id="1",
-        max_timestamp_millis=timestamp_ms
+        experiment_id="1", max_timestamp_millis=timestamp_ms
     )
     ```
   </TabItem>
@@ -64,10 +61,7 @@ Deleting a trace is an irreversible process. Ensure that the parameters provided
     # Delete specific traces
     trace_ids = ["trace_id_1", "trace_id_2", "trace_id_3"]
 
-    deleted_count = client.delete_traces(
-        experiment_id="1",
-        trace_ids=trace_ids
-    )
+    deleted_count = client.delete_traces(experiment_id="1", trace_ids=trace_ids)
 
     print(f"Deleted {deleted_count} traces")
     ```
@@ -80,32 +74,34 @@ Deleting a trace is an irreversible process. Ensure that the parameters provided
     from datetime import datetime, timedelta
     from mlflow import MlflowClient
 
+
     def cleanup_old_traces(experiment_id: str, days_old: int = 30, batch_size: int = 100):
         """Delete traces older than specified days in batches"""
         client = MlflowClient()
-        
+
         # Calculate cutoff timestamp
         cutoff_date = datetime.now() - timedelta(days=days_old)
         cutoff_timestamp = int(cutoff_date.timestamp() * 1000)
-        
+
         total_deleted = 0
-        
+
         while True:
             deleted_count = client.delete_traces(
                 experiment_id=experiment_id,
                 max_timestamp_millis=cutoff_timestamp,
-                max_traces=batch_size
+                max_traces=batch_size,
             )
-            
+
             total_deleted += deleted_count
             print(f"Deleted {deleted_count} traces (total: {total_deleted})")
-            
+
             if deleted_count < batch_size:
                 break
-                
+
             time.sleep(0.1)  # Brief pause between batches
-        
+
         return total_deleted
+
 
     # Usage
     cleanup_old_traces(experiment_id="1", days_old=7)
@@ -123,27 +119,28 @@ Deleting a trace is an irreversible process. Ensure that the parameters provided
     import mlflow
     from mlflow import MlflowClient
 
+
     def delete_error_traces(experiment_id: str):
         """Delete only traces that resulted in errors"""
         client = MlflowClient()
-        
+
         # Search for error traces
         traces = mlflow.search_traces(
             experiment_ids=[experiment_id],
             filter_string="status = 'ERROR'",
-            max_results=1000
+            max_results=1000,
         )
-        
+
         if traces:
             trace_ids = [trace.info.trace_id for trace in traces]
             deleted_count = client.delete_traces(
-                experiment_id=experiment_id,
-                trace_ids=trace_ids
+                experiment_id=experiment_id, trace_ids=trace_ids
             )
             print(f"Deleted {deleted_count} error traces")
             return deleted_count
-        
+
         return 0
+
 
     # Usage
     delete_error_traces("1")
@@ -156,15 +153,15 @@ Deleting a trace is an irreversible process. Ensure that the parameters provided
     import mlflow
     from mlflow import MlflowClient
 
+
     def delete_with_dry_run(experiment_id: str, max_timestamp: int, dry_run: bool = True):
         """Delete traces with optional dry-run mode"""
         client = MlflowClient()
-        
+
         if dry_run:
             # Search to see what would be deleted
             traces = mlflow.search_traces(
-                experiment_ids=[experiment_id],
-                filter_string=f"timestamp < {max_timestamp}"
+                experiment_ids=[experiment_id], filter_string=f"timestamp < {max_timestamp}"
             )
             print(f"DRY RUN: Would delete {len(traces)} traces")
             return len(traces)
@@ -172,10 +169,11 @@ Deleting a trace is an irreversible process. Ensure that the parameters provided
             deleted_count = client.delete_traces(
                 experiment_id=experiment_id,
                 max_timestamp_millis=max_timestamp,
-                max_traces=1000
+                max_traces=1000,
             )
             print(f"ACTUAL: Deleted {deleted_count} traces")
             return deleted_count
+
 
     # Always test with dry run first
     count = delete_with_dry_run("1", 1234567890000, dry_run=True)
@@ -190,18 +188,18 @@ Deleting a trace is an irreversible process. Ensure that the parameters provided
     from mlflow import MlflowClient
     from mlflow.exceptions import MlflowException
 
+
     def safe_delete_traces(experiment_id: str, **delete_params):
         """Delete traces with error handling"""
         client = MlflowClient()
-        
+
         try:
             deleted_count = client.delete_traces(
-                experiment_id=experiment_id,
-                **delete_params
+                experiment_id=experiment_id, **delete_params
             )
             print(f"Successfully deleted {deleted_count} traces")
             return deleted_count
-            
+
         except MlflowException as e:
             if "experiment not found" in str(e).lower():
                 print("Error: Experiment not found")
@@ -210,10 +208,11 @@ Deleting a trace is an irreversible process. Ensure that the parameters provided
             else:
                 print(f"MLflow error: {e}")
             return 0
-            
+
         except Exception as e:
             print(f"Unexpected error: {e}")
             return 0
+
 
     # Usage
     safe_delete_traces("1", max_timestamp_millis=1234567890000, max_traces=50)
