--- a/docs/docs/genai/tracing/tracing-101.mdx
+++ b/docs/docs/genai/tracing/tracing-101.mdx
@@ -55,14 +55,14 @@ A **trace** is a collection of spans organized in a Directed Acyclic Graph (DAG)
 import mlflow
 from openai import OpenAI
 
+
 # This creates a trace with multiple spans
 @mlflow.trace  # Root span: "process_chat_request"
 def process_chat_request(user_message):
     # Child span: automatically created for OpenAI call
     client = OpenAI()
     response = client.chat.completions.create(
-        model="gpt-4o-mini",
-        messages=[{"role": "user", "content": user_message}]
+        model="gpt-4o-mini", messages=[{"role": "user", "content": user_message}]
     )
     return response.choices[0].message.content
 ```
@@ -111,40 +111,38 @@ import mlflow
 from openai import OpenAI
 import time
 
+
 @mlflow.trace
 def enhanced_chat_completion(user_message, conversation_history=None):
     start_time = time.time()
-    
+
     # Add context to the trace
     mlflow.update_current_trace(
         tags={
             "application": "customer_support_chat",
             "user_type": "premium",
-            "conversation_length": len(conversation_history or [])
+            "conversation_length": len(conversation_history or []),
         }
     )
-    
+
     # Prepare messages with history
     messages = conversation_history or []
     messages.append({"role": "user", "content": user_message})
-    
+
     client = OpenAI()
     response = client.chat.completions.create(
-        model="gpt-4o-mini",
-        messages=messages,
-        temperature=0.7,
-        max_tokens=500
+        model="gpt-4o-mini", messages=messages, temperature=0.7, max_tokens=500
     )
-    
+
     # Add performance metrics
     mlflow.update_current_trace(
         attributes={
             "response_time_seconds": time.time() - start_time,
             "token_count": response.usage.total_tokens,
-            "model_used": response.model
+            "model_used": response.model,
         }
     )
-    
+
     return response.choices[0].message.content
 ```
 
@@ -185,6 +183,7 @@ import mlflow
 from openai import OpenAI
 import numpy as np
 
+
 @mlflow.trace
 def rag_chat_completion(user_question, vector_store):
     # Tag the trace for RAG-specific monitoring
@@ -192,20 +191,21 @@ def rag_chat_completion(user_question, vector_store):
         tags={
             "application_type": "rag",
             "vector_store_type": "chromadb",
-            "retrieval_strategy": "semantic_search"
+            "retrieval_strategy": "semantic_search",
         }
     )
-    
+
     # Step 1: Embed the user question
     embedded_question = embed_query(user_question)
-    
+
     # Step 2: Retrieve relevant documents
     relevant_docs = retrieve_documents(embedded_question, vector_store)
-    
+
     # Step 3: Generate response with context
     response = generate_with_context(user_question, relevant_docs)
-    
+
     return response
+
 
 @mlflow.trace
 def embed_query(query):
@@ -214,61 +214,57 @@ def embed_query(query):
     mlflow.update_current_trace(
         attributes={
             "query_length": len(query),
-            "embedding_model": "text-embedding-ada-002"
+            "embedding_model": "text-embedding-ada-002",
         }
     )
     # Return embedding vector
     return np.random.rand(1536)  # Placeholder
+
 
 @mlflow.trace
 def retrieve_documents(query_embedding, vector_store, top_k=5):
     """Retrieve relevant documents from vector store."""
     # Vector search logic here
     mlflow.update_current_trace(
-        attributes={
-            "top_k": top_k,
-            "search_type": "cosine_similarity"
-        }
+        attributes={"top_k": top_k, "search_type": "cosine_similarity"}
     )
-    
+
     # Simulate document retrieval
     documents = [
         {"content": "Document 1 content...", "score": 0.85},
         {"content": "Document 2 content...", "score": 0.82},
     ]
-    
+
     mlflow.update_current_trace(
         attributes={
             "documents_found": len(documents),
-            "avg_relevance_score": sum(d["score"] for d in documents) / len(documents)
+            "avg_relevance_score": sum(d["score"] for d in documents) / len(documents),
         }
     )
-    
+
     return documents
+
 
 @mlflow.trace
 def generate_with_context(question, documents):
     """Generate answer using retrieved context."""
     # Prepare context from documents
     context = "\n".join([doc["content"] for doc in documents])
-    
+
     mlflow.update_current_trace(
-        attributes={
-            "context_length": len(context),
-            "num_context_docs": len(documents)
-        }
+        attributes={"context_length": len(context), "num_context_docs": len(documents)}
     )
-    
+
     # Generate response with context
     client = OpenAI()
     response = client.chat.completions.create(
         model="gpt-4o-mini",
         messages=[
             {"role": "system", "content": f"Answer based on this context: {context}"},
-            {"role": "user", "content": question}
-        ]
+            {"role": "user", "content": question},
+        ],
     )
-    
+
     return response.choices[0].message.content
 ```
 
@@ -324,25 +320,26 @@ While qualitative model performance assessment may not require tracing, it can s
 import mlflow
 import time
 
+
 @mlflow.trace
 def predict_fraud(transaction_data):
     start_time = time.time()
-    
+
     # Preprocess the data
     processed_data = preprocess_transaction(transaction_data)
-    
+
     # Make prediction
     prediction = fraud_model.predict(processed_data)
-    
+
     # Log performance metrics
     mlflow.update_current_trace(
         attributes={
             "prediction_time_ms": (time.time() - start_time) * 1000,
             "model_version": "v2.1.0",
-            "confidence_score": prediction.probability
+            "confidence_score": prediction.probability,
         }
     )
-    
+
     return prediction
 ```
 
@@ -351,23 +348,19 @@ def predict_fraud(transaction_data):
 @mlflow.trace
 def ml_api_endpoint(request_data, user_id):
     mlflow.update_current_trace(
-        tags={
-            "user_id": user_id,
-            "api_version": "v1",
-            "endpoint": "/predict"
-        }
+        tags={"user_id": user_id, "api_version": "v1", "endpoint": "/predict"}
     )
-    
+
     # Process request and return prediction
     result = make_prediction(request_data)
-    
+
     mlflow.update_current_trace(
         attributes={
             "request_size_bytes": len(str(request_data)),
-            "response_size_bytes": len(str(result))
+            "response_size_bytes": len(str(result)),
         }
     )
-    
+
     return result
 ```
 
@@ -379,7 +372,7 @@ def ensemble_prediction(input_data):
     preprocessed = preprocessing_model(input_data)
     features = feature_extraction_model(preprocessed)
     prediction = final_model(features)
-    
+
     return prediction
 ```
 
