--- a/docs/docs/prompts/optimize-prompt.mdx
+++ b/docs/docs/prompts/optimize-prompt.mdx
@@ -174,6 +174,7 @@ You can customize the optimization process using `OptimizerConfig`, which includ
 - **max_few_show_examples**: The maximum number of examples to show in few-shot demonstrations. Default: 6
 - **optimizer_llm**: The LLM to use for optimization. Default: None (uses target LLM)
 - **verbose**: Whether to show optimizer logs during optimization. Default: False
+- **autolog**: Whether to automatically create a MLflow run and log the optimization parameters, metrics and datasets. Default: True
 
 See <APILink fn="mlflow.genai.OptimizerConfig" /> for more details.
 
